# marzel

./: README.md
marzel/: pyproject.toml
marzel/src/marzel/: cli.py
marzel/test/: conftest.py  test_cli_version.py
